# inter-struct

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: test.yml
codegen/: Cargo.toml
codegen/src/: debug.rs  error.rs  helper.rs  lib.rs  module.rs  parse.rs  path.rs
codegen/src/generate/: field.rs  mod.rs  types.rs
codegen/src/generate/into/: mod.rs  normal.rs  with_default.rs
codegen/src/generate/merge/: borrowed.rs  mod.rs  owned.rs
inter-struct/: Cargo.toml
src/: lib.rs  merge.rs
testing/: Cargo.toml
testing/src/: lib.rs
testing/src/into_test/: into.rs  into_default.rs  mod.rs
testing/src/merge_test/: merge.rs  merge_ref.rs  mod.rs
testing/src/path/: file.rs  mod.rs
testing/tests/: compile_errors.rs
testing/tests/attributes/: not_existent.rs  not_existent.stderr
testing/tests/compile-fail/: into_incomplete.rs  into_incomplete.stderr
testing/tests/into/: incompatible_type.rs  incompatible_type.stderr  incomplete.rs  incomplete.stderr  optional_into_non_optional.rs  optional_into_non_optional.stderr
testing/tests/merge/: incompatible_optional_types.rs  incompatible_optional_types.stderr  incompatible_type.rs  incompatible_type.stderr  incompatible_types.rs  incompatible_types.stderr
testing/tests/merge_ref/: incompatible_optional_types.rs  incompatible_optional_types.stderr  incompatible_types.rs  incompatible_types.stderr
testing/tests/path/: not_existent.rs  not_existent.stderr
testing/tests/stub_declarations/: lib.rs
