[workspace]
members = ["codegen", "testing", "inter-struct"]
exclude = ["examples/test"]
resolver = "2"

[workspace.package]
authors = ["Arne Beer <contact@arne.beer>"]
repository = "https://github.com/nukesor/inter-struct"
homepage = "https://github.com/nukesor/inter-struct"
license = "MIT"
edition = "2021"
rust-version = "1.62"
