[package]
name = "inter-struct-codegen"
description = "Proc macro codegen crate for merge-struct."
version = "0.2.0"
keywords = ["library", "merge", "struct", "macro"]
documentation = "https://docs.rs/inter-struct-codegen/"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[features]
# This flag is for debugging only!
debug = []

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
